--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "watch": "concurrently --kill-others-on-fail \"cd meme-gen && npm start\" \"cd server && npm start\" ",
-    "server": "cd server && node server.js"
+    "build": "cd server && npm install",
+    "server": "cd server && node server.js",
+    "deploy": "npm run build && npm run server"
   },
   "repository": {
     "type": "git",
